--- a/arch/arm64/configs/etherious_defconfig
+++ b/arch/arm64/configs/etherious_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-🔥Etherious-HMP-OC-LA.UM.7.2.r1-09000-sdm660.0🔥"
+CONFIG_LOCALVERSION="-🇮🇩Alive-OCP_RooGhz720🇮🇩"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
