--- a/arch/arm64/configs/alive_defconfig
+++ b/arch/arm64/configs/alive_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-🇮🇩Alive-OCP_RooGhz720🇮🇩"
+CONFIG_LOCALVERSION="-🇮🇩Alive-OCP1_RooGhz720🇮🇩"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
